--- a/admin/broadleaf-contentmanagement-module/pom.xml
+++ b/admin/broadleaf-contentmanagement-module/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>admin</artifactId>
         <groupId>org.broadleafcommerce</groupId>
-        <version>5.2.26-T1</version>
+        <version>5.2.26-SNAPSHOT</version>
     </parent>
     <artifactId>broadleaf-contentmanagement-module</artifactId>
     <packaging>jar</packaging>
